@@ -11,6 +11,8 @@ Release 2.7.5 - UNRELEASED
   OPTIMIZATIONS
 
   BUG FIXES
+    HDFS-12157. Do fsyncDirectory(..) outside of FSDataset lock.
+    (Vinayakumar B. via kihwal)
 
 Release 2.7.4 - 2017-08-04
 
